# Sentinel-AI

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env  .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/agents/: __init__.py
backend/app/ai/evaluation/: __init__.py
backend/app/ai/memory/: __init__.py
backend/app/ai/tools/: __init__.py
backend/app/api/v1/: router.py
backend/app/core/: exceptions.py  logging_context.py  telemetry.py
backend/app/core/config/: __init__.py  base.py  dev.py  prod.py  test.py
backend/app/core/events/: bus.py  events.py
backend/app/domains/auth/: __init__.py
backend/app/domains/incident/: __init__.py
backend/app/domains/investigation/: __init__.py
backend/app/domains/monitoring/: __init__.py
backend/app/domains/rag/: __init__.py
backend/app/domains/reporting/: __init__.py
backend/app/domains/users/: __init__.py
backend/app/infrastructure/cache/: __init__.py
backend/app/infrastructure/database/: __init__.py  database.py
backend/app/infrastructure/llm/: exceptions.py  factory.py  models.py  provider.py  router.py
backend/app/infrastructure/messaging/: __init__.py
backend/app/infrastructure/storage/: __init__.py
backend/app/infrastructure/vector/: __init__.py
backend/app/integrations/github/: __init__.py
backend/app/integrations/grafana/: __init__.py
backend/app/integrations/slack/: __init__.py
backend/app/middleware/: correlation.py
backend/app/workers/: __init__.py
backend/tests/: __init__.py  test_placeholder.py  test_smoke.py
(+12 files in other folders)
