[project]
name = "sentinel-ai"
version = "0.1.0"
description = "The AI Incident Response Engineer for Modern Cloud Applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.3",
    "qdrant-client>=1.8.0",
    "litellm>=1.34.0",
    "langgraph>=0.0.30",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "python-json-logger>=2.0.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "mypy>=1.9.0"
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
